--- a/style/site.css
+++ b/style/site.css
@@ -32,7 +32,7 @@ html, body {
 
 body {
   background-color: #444;
-  background-image: url("/images/background.gif");
+  background-image: url("../images/background.gif");
   color: #222;
   font-family: 'Roboto', sans-serif;
   line-height: 125%;
