--- a/style/site.css
+++ b/style/site.css
@@ -36,7 +36,7 @@ body {
   color: #222;
   font-family: 'Roboto', sans-serif;
   line-height: 125%;
-  word-wrap: break-word;
+  word-wrap: normal;
 }
 
 h1, h2, h3, h4, h5, h6, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
@@ -465,7 +465,7 @@ code {
   }
 }
 
-@media screen and (min-width: 450px) and (max-width: 849px) {
+@media screen and (min-width: 450px) and (max-width: 899px) {
 
   .navbar br.two {
     display: block;
