Fixed some invalid HTML.

--- a/style/site.css
+++ b/style/site.css
@@ -1,6 +1,6 @@
 /*
 FILE NAME: site.css
-WRITTEN BY: H&aring;vard, Runar, Petter, Thomas
+WRITTEN BY: Håvard, Runar, Petter, Thomas
 WHEN: 2016 autumn
 PORPOSE: Contains all non-default and non-custom styling for the site.
 */
