Updates search related stuff.

--- a/style/site.css
+++ b/style/site.css
@@ -425,17 +425,28 @@ code {
   margin: 5px;
 }
 
-.search #search {
+#search-bar {
+  box-sizing: border-box;
   width: 100%;
+  padding: 5px;
+  border: 1px solid #444;
+  background-color: #555;
+  color: #eee;
 }
 
 .search .dropdownContent {
   display: none;
-  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  max-height: 80px;
+  overflow: scroll;
+  border: 1px solid #444;
+  background-color: #666;
 }
 
 .search .dropdownContent a {
   display: block;
+  padding: 0 10px;
   color: black;
 }
 .search .show {
@@ -548,7 +559,7 @@ code {
     border-top: 0;
   }
 
-  #search {
+  .search {
     max-width: 400px;
     width: 100%;
   }
