--- a/style/site.css
+++ b/style/site.css
@@ -439,7 +439,7 @@ code {
   box-sizing: border-box;
   width: 100%;
   max-height: 80px;
-  overflow: scroll;
+  overflow: auto;
   border: 1px solid #444;
   background-color: #666;
 }
