--- a/style/site.css
+++ b/style/site.css
@@ -495,7 +495,7 @@ code {
 .section_link {
   display: block;
   margin: 20px 0;
-  padding: 10px;
+  padding: 10px 10px 10px 40px;
   border: 1px solid #444;
   border-radius: 5px;
   background-color: #666;
